finsihed bh actually

--- a/index.html
+++ b/index.html
@@ -15457,15 +15457,7 @@ lin: -0.202   -0.315   -0.026    -0.379
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>A good residuals graphs are residuals that hover equally above and below 0. Following the trend I showed using the cross validation scores, it seems that generally the models do a good job of predicting grades in the class. Linear regression is the best.</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>When comparing differnt regressors we see that generally the decision tree and linear regression is better at predicting than the k-nearest neighbors. However,</p>
+<p>A good residuals graphs are residuals that hover equally above and below 0. Following the trend I showed using the cross validation scores, it seems that generally the models do a good job of predicting grades in the class. Linear regression is the best.When comparing differnt regressors we see that generally the decision tree and linear regression is better at predicting than the k-nearest neighbors.</p>
 
 </div>
 </div>
